Бассейн/shcool21-master/shcool21-master/Day09/ex08/compiling_error.txt
/Users/jjerde/Day09/ex08/ft_spy.c:35:7: error: expected ';' after expression
                        ++i
                           ^
                           ;
1 error generated.
